- Expected `collections.iterable` but got `output:` false positive (see #317)
- Expected type `Iterable` (..), git `input: ` instead (see #319)
- Expected type `Iterable` (..), git `input: ` instead (see #320)
- Workaround for: 'Shadows built-in name `input`' inspection on lambda parameters (see #133)

Version 0.8.0 build #0.8.0.214
-------------
Released on July 3th 2020

Features:
- PyCharm 2020.2 builds compatibility


Version 0.7.0 build #0.7.0.209
-------------
Released on July 2th 2020

Features:
- Inspection: warn about confusing reference in localrules section (see #287)
- Inspection: Warn if mixed tabs and spaces (see #285)
- 'notebook' section parsing error (see #288)
- `envvars` isn't parsed properly (see #281)
- `container` top level and rule sections parsing (#291)
- Resolve/completion for paths in notebook section (see #289)
- Inspection: Conda environments are only allowed with shell, script, notebook,
    or wrapper directives (not with run). #290

Fixed:
- Rule not yet defined false positive for lambdas (see #286)
- Unresolved reference for 'rule' in 'run' section (see #283)
- Doesn't automatically create folding code element for "checkpoint" (see #273)
- Multiline shell commands in anonymous rules defined in loops (see #275)
- Do not warn about missing wildcards if no SmkSL injection in string (see #266)

Version 0.6.0 build #0.6.0.165
-------------
Released on April 12th 2019

Fixed:
- 2020.1 Compatibility (see #279)
- “cache:” rule section support (see #280)

Version 0.5.2 build #0.5.2.126
-------------
Released on November 26th 2019

Fixed:
- UnsupportedOperationException (see #271)

Version 0.5.2 build #0.5.2.124
-------------
Released on November 26th 2019

Minor update compatible with 2019.3 builds

Fixed:
- 2019.2 Deprecated API cleanup (see #219)
- PluginException: While loading class SnakemakeVisitorFilter (see #270)
- PsiInvalidElementAccessException: PyUnboundLocalVariableInspection (see #268)


Version 0.5.1 build #0.5.1.126