@@ -27,6 +27,7 @@ Fixed:
 - Expected type `Iterable` (..), git `input: ` instead (see #319)
 - Expected type `Iterable` (..), git `input: ` instead (see #320)
 - Workaround for: 'Shadows built-in name `input`' inspection on lambda parameters (see #133)
+- Confusing 'Cannot check missing wildcards here.' warning (see #307)
 
 Version 0.8.0 build #0.8.0.214
 -------------
